--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,78 @@
-apply plugin: 'com.android.application'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-android {
-    compileSdkVersion 26
-    defaultConfig {
-        applicationId "com.example.m_rau.skincancerdetector"
-        minSdkVersion 24
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+buildscript {
+    repositories {
+        jcenter()
+        google()
+        maven {
+            url 'https://maven.fabric.io/public'
+            }
         }
-    }
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['libs']
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.1'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.4'
+
+        classpath 'io.fabric.tools:gradle:1.26.1'
         }
-    }
-    productFlavors {
+}
+
+allprojects {
+    repositories {
+        maven {
+            url 'https://maven.google.com/'
+        }
+
+        jcenter()
+        google()
+
+        //https://github.com/prolificinteractive/material-calendarview
+        maven { url 'https://jitpack.io' }
     }
 }
 
-dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    apply plugin: 'com.android.application'
+
+    android {
+        compileSdkVersion 29
+        defaultConfig {
+            applicationId "com.example.m_rau.skincancerdetector"
+            minSdkVersion 24
+            targetSdkVersion 29
+            versionCode 1
+            versionName "1.0"
+            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
+        }
+        sourceSets {
+            main {
+                jniLibs.srcDirs = ['libs']
+            }
+        }
+        productFlavors {
+        }
+    }
+
+    dependencies {
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        implementation 'com.android.support:appcompat-v7:26.1.0'
+        implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'com.android.support.test:runner:1.0.1'
+        androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    }
+
+
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.1'
+    }
 }
