--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity
             android:name=".ResourcesActivity">
         </activity>
+        <activity
+            android:name=".ContactActivity">
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
