--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 30 08:28:33 EDT 2021
-sdk.dir=/home/kush/Android/Sdk
+#Fri Jun 04 01:11:08 IST 2021
+sdk.dir=/home/kushagra/Android/Sdk
