--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,15 @@ buildscript {
     repositories {
         jcenter()
         google()
-        maven {
-            url 'https://maven.fabric.io/public'
-            }
-        }
+    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.3.4'
 
-        classpath 'io.fabric.tools:gradle:1.26.1'
-        }
+    }
 }
 
 allprojects {
@@ -73,6 +69,7 @@ allprojects {
 
 buildscript {
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
     }
 }
